# triton-vm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  cliff.toml  code_coverage.sh  lychee.toml  opcodes.py  switch-constraint-files.sh
.cargo/: config.toml
constraint-builder/: Cargo.toml
constraint-builder/src/: lib.rs
constraint-evaluation-generator/: Cargo.toml  README.md
constraint-evaluation-generator/src/: asm.rs  codegen.rs  constraints.rs  main.rs  rust.rs  substitution.rs
constraint-evaluation-generator/src/codegen/: common_tasm.rs  dynamic_tasm.rs  rust.rs  static_tasm.rs  tasm.rs
simpler/: Cargo.toml
simpler/src/: lib.rs  tests.rs
src/: lib.rs
triton-air/: Cargo.toml  README.md
triton-air/proptest-regressions/table/: processor.txt
triton-air/src/: challenge_id.rs  cross_table_argument.rs  lib.rs  table.rs  table_column.rs
triton-air/src/table/: accumulator_pinning.rs  cascade.rs  hash.rs  jump_stack.rs  lookup.rs  op_stack.rs  processor.rs  program.rs  ram.rs  u32.rs
triton-cli/: .gitignore  Cargo.toml
triton-cli/src/: main.rs
triton-cli/test-vectors/: simple.proof  simple.tasm
triton-constraint-builder/: Cargo.toml  README.md
triton-constraint-builder/benches/: degree_lowering.rs
triton-constraint-builder/src/: codegen.rs  lib.rs  substitutions.rs
triton-constraint-circuit/: Cargo.toml  README.md
triton-constraint-circuit/src/: lib.rs
triton-dev-util/: Cargo.toml
triton-dev-util/src/: example_programs.rs  lib.rs
triton-isa/: Cargo.toml  README.md
triton-isa/proptest-regressions/: op_stack.txt  parser.txt
triton-isa/src/: error.rs  instruction.rs  lib.rs  op_stack.rs  parser.rs  program.rs
triton-opcodes/: Cargo.toml  README.md
triton-opcodes/src/: instruction.rs  lib.rs  ord_n.rs  parser.rs  program.rs  shortcuts.rs
triton-profiler/: Cargo.toml
triton-profiler/src/: lib.rs  triton_profiler.rs
triton-tui/: .envrc  Cargo.toml  README.md  build.rs  program.tasm
triton-tui/.config/: default_config.json  default_config.json5
triton-tui/completions/: triton-tui.bash  triton-tui.elvish  triton-tui.fish  triton-tui.powershell  triton-tui.zsh
triton-tui/examples/: initial_state.json  non_determinism.json  public_input.txt  triton-tui.tape
triton-tui/src/: action.rs  args.rs  args_tests.rs  cli.rs  components.rs  config.rs  element_type_hint.rs  main.rs  mode.rs  shadow_memory.rs  triton_tui.rs  triton_vm_state.rs  tui.rs  type_hint_stack.rs  utils.rs
triton-tui/src/components/: fps.rs  help.rs  home.rs  memory.rs  type_hint_stack.rs
triton-tui/tests/: infinite_loop.tasm  tests.rs
triton-vm/: Cargo.toml  build.rs
triton-vm/.cargo/: config.toml
triton-vm/benches/: barycentric_eval.rs  bezout_coeffs.rs  cached_vs_jit_trace.rs  initialize_array.rs  mem_io.rs  proof_size.rs  prove_fib.rs  prove_fib_100.rs  prove_halt.rs  prove_verify.rs  sponge_hashing.rs  trace_mmr_new_peak_calculation.rs  verify_halt.rs
triton-vm/examples/: cmd.rs  factorial.rs
triton-vm/proptest-regressions/: constraints.txt  lib.txt  stark.txt  vm.txt
triton-vm/src/: aet.rs  air.rs  arguments.rs  arithmetic_domain.rs  bfield_codec.rs  challenges.rs  config.rs  constants.rs  constraints.rs  cross_table_arguments.rs  domain.rs  error.rs  example_programs.rs  execution_trace_profiler.rs  fri.rs  fri_domain.rs  instruction.rs  instruction_shortcuts.rs  lib.rs  memory_layout.rs  ndarray_helper.rs  op_stack.rs  ord_n.rs  parser.rs  prelude.rs  profiler.rs  program.rs  proof.rs  proof_item.rs  proof_stream.rs  shared_tests.rs  stark.rs  state.rs  stdio.rs  stir.rs  table.rs  triton_profiler.rs  triton_xfri.rs  utils.rs  vm.rs
triton-vm/src/air/: dynamic_tasm.rs  memory_layout.rs  tasm_air_constraints.rs
triton-vm/src/arguments/: evaluation_argument.rs  permutation_argument.rs
triton-vm/src/codegen/: circuit.rs  constraints.rs  mod.rs  substitutions.rs
triton-vm/src/low_degree_test/: fri.rs  mod.rs  stir.rs
triton-vm/src/table/: auxiliary_table.rs  base_matrix.rs  base_table.rs  cascade.rs  cascade_table.rs  challenges.rs  challenges_endpoints.rs  challenges_terminals.rs  constraint_circuit.rs  constraints.rs  cross_table_argument.rs  degree_lowering.rs  degree_lowering_table.rs  extension_table.rs  hash.rs  hash_table.rs  instruction_table.rs  instruction_table_autogen.rs  jump_stack.rs  jump_stack_table.rs  jump_stack_table_autogen.rs  lookup.rs  lookup_table.rs  master_table.rs  op_stack.rs  op_stack_table.rs  op_stack_table_autogen.rs  processor.rs  processor_table.rs  processor_table_autogen.rs  program.rs  program_table.rs  program_table_autogen.rs  ram.rs  ram_table.rs  ram_table_autogen.rs  table_collection.rs  table_column.rs  tasm_air_constraints.rs  u32.rs  (+2 more)
triton-vm/src/table/constraints/: cascade_table_constraints.rs  cross_table_argument_constraints.rs  hash_table_constraints.rs  instruction_table_constraints.rs  jump_stack_table_constraints.rs  lookup_table_constraints.rs  op_stack_table_constraints.rs  processor_table_constraints.rs  program_table_constraints.rs  ram_table_constraints.rs  u32_table_constraints.rs
triton-vm/src/triton/: error.rs  fri_domain.rs  instruction.rs  op_stack.rs  proof_item.rs  stark.rs  state.rs  stdio.rs  table.rs  triton_xfri.rs  vm.rs
triton-vm/src/triton/arguments/: evaluation_argument.rs  permutation_argument.rs
triton-vm/src/triton/table/: base_matrix.rs  base_table.rs  challenges_endpoints.rs  extension_table.rs  hash_table.rs  instruction_table.rs  jump_stack_table.rs  op_stack_table.rs  processor_table.rs  program_table.rs  ram_table.rs  table_collection.rs  table_column.rs  u32_op_table.rs
triton-vm/test_data/: current_version_is_current.proof
triton-vm/trybuild/: macro_profile_start_is_not_pub.rs  macro_profile_start_is_not_pub.stderr  macro_profile_stop_is_not_pub.rs  macro_profile_stop_is_not_pub.stderr  profiler_macro_is_private.rs  profiler_macro_is_private.stderr
tutorial/tools/mdbook-triton-playground/: Cargo.toml  README.md
tutorial/tools/mdbook-triton-playground/src/: lib.rs  main.rs
(+85 files in other folders)
