[workspace]
members = ["triton-vm", "triton-tui", "constraint-evaluation-generator"]
resolver = "2"

[profile.test]
opt-level = 1

[profile.release]
lto = "thin"

[profile.bench]
lto = "thin"

[workspace.package]
version = "0.36.1"
edition = "2021"
authors = ["Triton Software AG"]
license = "Apache-2.0"
homepage = "https://triton-vm.org/"
repository = "https://github.com/TritonVM/triton-vm"
readme = "README.md"
documentation = "https://triton-vm.org/spec/"

[workspace.dependencies]
anyhow = "1.0"
arbitrary = { version = "1", features = ["derive"] }
assert2 = "0.3"
bincode = "1.3"
colored = "2.1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "unicode", "string"] }
criterion = { version = "0.5", features = ["html_reports"] }
directories = "5"
get-size = "0.1.4"
itertools = "0.12"
lazy_static = "1.4"
ndarray = { version = "0.15", features = ["rayon"] }
nom = "7.1"
num-traits = "0.2"
prettyplease = "0.2"
pretty_assertions = "1.4"
proc-macro2 = "1.0"
proptest = "1.4"
proptest-arbitrary-interop = "0.1"
quote = "1.0"
rand = "0.8.5"
rand_core = "0.6.4"
rayon = "1.8"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
syn = "2.0"
test-strategy = "0.3.1"
thiserror = "1.0"
twenty-first = { git = "https://github.com/Neptune-Crypto/twenty-first", rev = "59944288" }
unicode-width = "0.1"

[workspace.dependencies.cargo-husky]
version = "1.5"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
