[workspace]
members = [
    "triton-air",
    "triton-constraint-builder",
    "triton-constraint-circuit",
    "triton-isa",
    "triton-vm",
]
resolver = "2"

[profile.test]
opt-level = 1
build-override.opt-level = 3

[profile.release]
lto = "thin"
build-override.opt-level = 3

[profile.bench]
lto = "thin"
build-override.opt-level = 3

[profile.dev]
opt-level = 1
build-override.opt-level = 3

[workspace.package]
version = "0.50.0"
edition = "2024"
rust-version = "1.85"
authors = ["Triton Software AG"]
license = "MIT OR Apache-2.0"
homepage = "https://triton-vm.org/"
repository = "https://github.com/TritonVM/triton-vm"
readme = "README.md"
documentation = "https://triton-vm.org/spec/"

[workspace.dependencies.air]
version = "0.50.0"
path = "triton-air"
package = "triton-air"

[workspace.dependencies.constraint-builder]
version = "0.50.0"
path = "triton-constraint-builder"
package = "triton-constraint-builder"

[workspace.dependencies.constraint-circuit]
version = "0.50.0"
path = "triton-constraint-circuit"
package = "triton-constraint-circuit"

[workspace.dependencies.isa]
version = "0.50.0"
path = "triton-isa"
package = "triton-isa"

[workspace.dependencies]
arbitrary = { version = "1", features = ["derive"] }
assert2 = "0.3"
colored = "3.0"
criterion = { package = "codspeed-criterion-compat", version = "2.10", features = ["html_reports"] }
fs-err = "3.1"
get-size2 = { version = "0.5", features = ["derive"] }
indexmap = { version = "2.10.0", features = ["rayon"] }
insta = "1.43.1"
itertools = "0.14"
lazy_static = "1.5"
memory-stats = { version = "1.2", features = ["always_use_statm"] }
ndarray = { version = "0.16", features = ["rayon"] }
nom = "8.0.0"
nom-language = "0.1.0"
num-traits = "0.2"
prettyplease = "0.2"
proc-macro2 = "1.0"
proptest = "1.7"
proptest-arbitrary-interop = "0.1"
quote = "1.0"
rand = "0.9.1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
syn = "2.0"
test-strategy = "0.4.2"
thiserror = "2.0"
twenty-first = "0.50.0"
unicode-width = "0.2"

[workspace.lints.rust]
let_underscore_drop = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }

[workspace.lints.clippy]
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_link_with_quotes = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
large_digit_groups = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
needless_continue = "warn"
needless_for_each = "warn"
no_effect_underscore_binding = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
should_panic_without_expect = "warn"
stable_sort_primitive = "warn"
struct_field_names = "warn"
trivially_copy_pass_by_ref = "warn"
unchecked_duration_subtraction = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
#unreadable_literal = "warn"
unused_async = "warn"
used_underscore_binding = "warn"
verbose_bit_mask = "warn"
wildcard_imports = "warn"
