[package]
name = "constraint-evaluation-generator"
version = "0.1.0"
edition = "2021"
authors = ["Triton Software AG"]

license = "Apache-2.0"
description = "Generate constraint evaluation functions for Triton VM tables"
homepage = "https://triton-vm.org/"
documentation = "https://github.com/TritonVM/triton-vm/blob/master/constraint-evaluation-generator"
repository = "https://github.com/TritonVM/triton-vm"
readme = "README.md"

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false

[dependencies]
twenty-first = "0.10"
triton-vm = { path = "../triton-vm" }
itertools = "0.10"
