[package]
name = "constraint-evaluation-generator"
description = "Generate constraint evaluation functions for Triton VM tables"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
triton-vm = { path = "../triton-vm" }

twenty-first.workspace = true
itertools.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
prettyplease.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
cargo-husky.workspace = true
