[package]
name = "plain"
version = "0.1.0"
edition = "2024"

[dependencies]
triton-constraint-circuit = {path = "../triton-constraint-circuit"}
itertools = "0.14"
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.9.0"
proptest = "1.6"
test-strategy = "0.4.0"
proptest-arbitrary-interop = "0.1"
arbitrary = { version = "1", features = ["derive"] }
twenty-first = "0.48.0"
num-traits = "0.2"
quote = "1.0"
proc-macro2 = "1.0"