[package]
name = "triton-air"
description = """
The Arithmetic Intermediate Representation (AIR) for Triton VM.
"""

readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
arbitrary.workspace = true
constraint-circuit.workspace = true
isa.workspace = true
itertools.workspace = true
strum.workspace = true
twenty-first.workspace = true

[dev-dependencies]
ndarray.workspace = true
num-traits.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
test-strategy.workspace = true

[lints]
workspace = true
