[package]
name = "triton-constraint-builder"
description = """
Emits efficient code from Triton VM's AIR.
"""

readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
air.workspace = true
constraint-circuit.workspace = true
isa.workspace = true
itertools.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
strum.workspace = true
syn.workspace = true
twenty-first.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
test-strategy.workspace = true

[lints]
workspace = true

[[bench]]
name = "degree_lowering"
harness = false
