[package]
name = "triton-opcodes"
version = "0.21.0"
edition = "2021"
authors = ["Triton Software AG"]

license = "Apache-2.0"
description = "Triton VM instructions and their translations"
homepage = "https://triton-vm.org/"
documentation = "https://github.com/TritonVM/triton-vm/blob/master/triton-opcodes"
repository = "https://github.com/TritonVM/triton-vm"
readme = "README.md"

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false

[dependencies]
twenty-first = "0.24.0"
anyhow = "1.0"
get-size = "0.1.3"
itertools = "0.10.5"
num-traits = "0.2.15"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
strum = "0.24.1"
strum_macros = "0.24.1"
nom = "7.1"
