[package]
name = "triton-opcodes"
description = "Triton VM instructions and their translations"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
twenty-first.workspace = true
anyhow.workspace = true
get-size.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
strum.workspace = true
strum_macros.workspace = true

nom = "7.1"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
cargo-husky.workspace = true
