[package]
name = "triton-profiler"
version = "0.21.0"
authors = ["Triton Software AG"]
edition = "2021"

license = "GPL-2.0"
description = "A universal profiler tailored to Triton-VM"
homepage = "https://github.com/Neptune-Crypto/triton-vm"
documentation = "https://github.com/Neptune-Crypto/triton-vm"
repository = "https://github.com/Neptune-Crypto/triton-vm"
readme = "../README.md"

keywords = ["triton-vm", "stark", "profiler"]
categories = ["cryptography", "mathematics"]

[dependencies]
twenty-first = "0.23.0"
colored = "2.0"
rand = "0.8"
unicode-width = "0.1.5"
criterion = "0.4.0"

[dev-dependencies]
proptest = "1.0"

[dev-dependencies.criterion]
version = "0.4.0"
features = ["html_reports"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
