[package]
name = "triton-profiler"
description = "A universal profiler tailored to Triton-VM"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
twenty-first.workspace = true
rand.workspace = true
criterion.workspace = true

colored = "2.0"
unicode-width = "0.1.5"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
cargo-husky.workspace = true
