[package]
name = "triton-tui"

version = "0.1.0"
description = "Terminal User Interface to help debugging programs written for Triton VM."
readme = "README.md"

edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
arbitrary.workspace = true
better-panic = "0.3"
clap.workspace = true
color-eyre = "0.6"
config = "0.13"
crossterm = { version = "0.27", features = ["serde", "event-stream"] }
derive_deref = "1"
directories.workspace = true
fs-err = "2.11"
futures = "0.3"
human-panic = "1"
itertools.workspace = true
lazy_static.workspace = true
libc = "0.2"
num-traits.workspace = true
ratatui = { version = "0.25", features = ["serde", "macros"] }
rexpect = { version = "0.5", optional = true }
serde.workspace = true
serde_json = "1.0"
signal-hook = "0.3"
strip-ansi-escapes = "0.2"
strum.workspace = true
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
triton-vm = "0.36"
tui-textarea = "0.4"

[dev-dependencies]
assert2.workspace = true
pretty_assertions.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
test-strategy.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete = "4.4"
directories.workspace = true
lazy_static.workspace = true

[features]
default = []
integration-tests = ["rexpect"]

[[bin]]
name = "triton-tui"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/tests.rs"
