[workspace]
[package]
name = "mdbook-triton-playground"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
kuchiki = "0.8.1"
mdbook-preprocessor = "0.5"
pulldown-cmark = "0.13"
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
